--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
             <a href="#contact">CONTACT</a>
         </nav>
         <img src="images/me.jpg" style="border-radius:45%; padding:10px 0px; max-height:30vh;">
-        <p>Hi, I'm a front end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my
-            skills to use!</p>
+        <p>Hi, I'm an aspiring front end developer who loves responsive design and css. I am working towards my Bachelors in Computer Science and would love to work with you!</p>
     </header>   
     <main>  
         <section id="portfolio">
